--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
     "expo": "^47.0.8",
+    "expo-app-loading": "~2.1.1",
     "expo-image-picker": "~14.0.2",
     "expo-location": "~15.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
@@ -21,8 +23,7 @@
     "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "expo-app-loading": "~2.1.1",
-    "expo-splash-screen": "~0.17.5"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
