--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
+    "axios": "^1.2.1",
     "expo": "^47.0.8",
     "expo-app-loading": "~2.1.1",
     "expo-image-picker": "~14.0.2",
